--- a/index.html
+++ b/index.html
@@ -90,7 +90,13 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-            <p>TODO</p>
+            <p>Cursando Análise e Desenvolvimento de Sistemas, trabalho a mais
+              de 10 anos na área da tecnologia da informação.
+              Profissional altamente capacitado para trabalhar em equipe,
+              dinâmico, com iniciativa, facilidade de aprendizado e de bom
+              relacionamento interpessoal, dedicado às funções e focado em
+              resultados. Organizado, responsável e com facilidade em adaptar-se
+              à mudanças.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -98,15 +104,39 @@
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Universidade Paulista</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i> Maio de 2018 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <p>● Auxiliar nas atividades de gerenciamento de desenvolvimento ágil de
+                software por meio de sprints iterativos.
+                ● Projetar e desenvolver soluções de software baseadas na web.
+                ● Aprimoramento e correção de bugs de módulos existentes.
+                ● Interação para levantamento de requisitos.
+                ● Auxiliar nas atividades de gerenciamento de desenvolvimento ágil de
+                software por meio de sprints iterativos.
+                ● Aprimoramento e correção de bugs de módulos existentes.
+                ● Contribuição de scripts e tutoriais em base de conhecimento.
+                ● Auxílio no desenvolvimento de novas aplicações web.
+                ● Suporte N1 e N2 aos colaboradores interno e remoto.
+                ● Consulta na base de dados.
+                ● Atendimento a alunos e colaboradores.
+                ● Suporte help desk a alunos, polos e unidades do grupo Objetivo/UNIP.
+                ● Resolução de chamados através de e-mail e ferramenta de tickets.
+                ● Responsável pelo gerenciamento de contas e suporte nos portais utilizados
+                pelo grupo Microsoft Office 365.
+                ● Responsável direto por realizar o reporte de erros nos sistemas internos da
+                organização para os desenvolvedores.
+                ● Responsável direto por realizar teste em novos sistemas desenvolvidos pela
+                organização realizando o reporte de erros e mau funcionamento.
+                ● Cadastro de novos colaboradores no sistema de acesso da organização.
+                </p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Partner Engenharia E Comercio</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho 2013 - Julho de 2015 FIM</h6>
+              <p>● Instalação de Softwares em plataformas Windows.
+                ● Configuração e manutenção de computadores.
+                </p>
             </div>
           </div>
   
