experiencia em Listas não ordenadas

--- a/index.html
+++ b/index.html
@@ -106,28 +106,29 @@
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Universidade Paulista</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i> Maio de 2018 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
-              <p>● Auxiliar nas atividades de gerenciamento de desenvolvimento ágil de
-                software por meio de sprints iterativos.
-                ● Projetar e desenvolver soluções de software baseadas na web.
-                ● Aprimoramento e correção de bugs de módulos existentes.
-                ● Interação para levantamento de requisitos.
-                ● Auxiliar nas atividades de gerenciamento de desenvolvimento ágil de
-                software por meio de sprints iterativos.
-                ● Aprimoramento e correção de bugs de módulos existentes.
-                ● Contribuição de scripts e tutoriais em base de conhecimento.
-                ● Auxílio no desenvolvimento de novas aplicações web.
-                ● Suporte N1 e N2 aos colaboradores interno e remoto.
-                ● Consulta na base de dados.
-                ● Atendimento a alunos e colaboradores.
-                ● Suporte help desk a alunos, polos e unidades do grupo Objetivo/UNIP.
-                ● Resolução de chamados através de e-mail e ferramenta de tickets.
-                ● Responsável pelo gerenciamento de contas e suporte nos portais utilizados
-                pelo grupo Microsoft Office 365.
-                ● Responsável direto por realizar o reporte de erros nos sistemas internos da
-                organização para os desenvolvedores.
-                ● Responsável direto por realizar teste em novos sistemas desenvolvidos pela
-                organização realizando o reporte de erros e mau funcionamento.
-                ● Cadastro de novos colaboradores no sistema de acesso da organização.
+              <p>
+                <ul> 
+                  <li>Auxiliar nas atividades de gerenciamento de desenvolvimento ágil de
+                software por meio de sprints iterativos.</li>
+                <li>Projetar e desenvolver soluções de software baseadas na web.</li>
+                <li>Aprimoramento e correção de bugs de módulos existentes.</li> 
+                <li>Interação para levantamento de requisitos.</li>
+                <li>Aprimoramento e correção de bugs de módulos existentes.</li>
+                <li>Contribuição de scripts e tutoriais em base de conhecimento.</li>
+                <li>Auxílio no desenvolvimento de novas aplicações web.</li>
+                <li>Suporte N1 e N2 aos colaboradores interno e remoto.</li>
+                <li>Consulta na base de dados.</li>
+                <li>Atendimento a alunos e colaboradores.</li>
+                <li>Suporte help desk a alunos, polos e unidades do grupo Objetivo/UNIP.</li>
+                <li>Resolução de chamados através de e-mail e ferramenta de tickets.</li>
+                <li>>Responsável pelo gerenciamento de contas e suporte nos portais utilizados
+                pelo grupo Microsoft Office 365.</li>
+                <li>Responsável direto por realizar o reporte de erros nos sistemas internos da
+                organização para os desenvolvedores.</li>
+                <li>Responsável direto por realizar teste em novos sistemas desenvolvidos pela
+                organização realizando o reporte de erros e mau funcionamento.</li>
+                <li>Cadastro de novos colaboradores no sistema de acesso da organização.</li>
+                </ul>
                 </p>
               <hr>
             </div>
