Listas não ordenadas atualização linha 124

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <li>Atendimento a alunos e colaboradores.</li>
                 <li>Suporte help desk a alunos, polos e unidades do grupo Objetivo/UNIP.</li>
                 <li>Resolução de chamados através de e-mail e ferramenta de tickets.</li>
-                <li>>Responsável pelo gerenciamento de contas e suporte nos portais utilizados
+                <li>Responsável pelo gerenciamento de contas e suporte nos portais utilizados
                 pelo grupo Microsoft Office 365.</li>
                 <li>Responsável direto por realizar o reporte de erros nos sistemas internos da
                 organização para os desenvolvedores.</li>
