--- a/index.html
+++ b/index.html
@@ -135,8 +135,11 @@
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Partner Engenharia E Comercio</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho 2013 - Julho de 2015 FIM</h6>
-              <p>● Instalação de Softwares em plataformas Windows.
-                ● Configuração e manutenção de computadores.
+              <p>
+                <ul>
+                  <li>Instalação de Softwares em plataformas Windows.</li>
+                  <li>Configuração e manutenção de computadores.</li>
+                </ul>
                 </p>
             </div>
           </div>
