--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Partner Engenharia E Comercio</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho 2013 - Julho de 2015 FIM</h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho 2013 - Julho de 2015</h6>
               <p>
                 <ul>
                   <li>Instalação de Softwares em plataformas Windows.</li>
@@ -143,6 +143,17 @@
                 </p>
             </div>
           </div>
+          <div class="w3-container">
+            <h5 class="w3-opacity"><b>SPCOM (Sistema Perissinoto de Comunicação LTDA)</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho 2013 - Julho de 2015</h6>
+            <p>
+              <ul>
+                <li>Instalação de Softwares em plataformas Windows.</li>
+                <li>Configuração e manutenção de computadores.</li>
+              </ul>
+              </p>
+          </div>
+        </div>
   
           <div class="w3-container w3-card w3-white">
             <h2 class="w3-text-grey w3-padding-16">
