Atualização  de empresa

--- a/index.html
+++ b/index.html
@@ -144,11 +144,22 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>SPCOM (Sistema Perissinoto de Comunicação LTDA)</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho 2013 - Julho de 2015</h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Maio 2008 - Maio 2011</h6>
               <p>
                 <ul>
-                  <li>Instalação de Softwares em plataformas Windows.</li>
-                  <li>Configuração e manutenção de computadores.</li>
+                  <li>Gestão e orientação nas atividades da equipe, controle de qualidade</li>
+                  <li>Responsável pelo acompanhamento, e desenvolvimento da equipe em
+                    projetos</li>
+                  <li>Monitorando a equipe de técnicos, aplicando feedbacks aos colaboradores.</li>
+                  <li>Elaborando relatórios e apresentação de resultados da equipe técnica. </li>
+                  <li>Realizando o controle de folgas e escalas do time técnico.</li>
+                  <li>Capacitando novos colaboradores de turmas iniciais e de migração.</li>
+                  <li>Acompanhando o processo Instalação e configuração de equipamentos de
+                    rede realizado pelo time de técnicos.
+                    </li>
+                  <li>Monitorando a equipe técnica em seus processos cotidianos, como
+                    instalação de Softwares em plataformas Windows, suporte a rede mini modem
+                    e redes wi-fi.</li>
                 </ul>
                 </p>
                 <hr>
