atualiazção de dados - educação

--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
+                <li><a href="https://www.dio.me/certificate/31AB4351" target="_blank">Curso:SQL SERVER - Criando suas primeiras consultas</a></li>
+                <li><a href="https://www.dio.me/certificate/C978BCB4" target="_blank">Curso:Dominando o Protocolo HTTP e Integrando com a PokeAPI</a></li>
+                <li><a href="https://www.dio.me/certificate/83FEE668" target="_blank">Curso:Orientação a objetos em .NET</a></li>
               </ul>
               <hr>
             </div>
