--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="LINK_GITHUB" target="_blank">USUARIO_GITHUB/REPO</a>
+                <a href="https://github.com/Danieloliveria/MinhaPrimeiraApi.git" target="_blank">Danieloliveria_GITHUB/MinhaPrimeiraApi</a>
+                <a href="https://github.com/Danieloliveria/dio-desafio-github.git" target="_blank">Danieloliveria_GITHUB/dio-desafio</a>
+                <a href="https://github.com/Danieloliveria/Pokedex-.git" target="_blank">Danieloliveria_GITHUB/Pokedex</a>
               </h6>
               <p>TODO</p>
               <hr>
