--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
               <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="https://github.com/Danieloliveria/MinhaPrimeiraApi.git" target="_blank">Danieloliveria_GITHUB/MinhaPrimeiraApi</a>
-                <a href="https://github.com/Danieloliveria/dio-desafio-github.git" target="_blank">Danieloliveria_GITHUB/dio-desafio</a>
-                <a href="https://github.com/Danieloliveria/Pokedex-.git" target="_blank">Danieloliveria_GITHUB/Pokedex</a>
+                <i class="fa fa-github fa-fw w3-margin-right"></i>
+                <a href="https://github.com/Danieloliveria/Pokedex-.git" target="_blank">Danieloliveria_GITHUB/Pokedex-</a>
               </h6>
               <p>TODO</p>
               <hr>
