Atualização projetos linha 211

--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
                 <a href="https://github.com/Danieloliveria/MinhaPrimeiraApi.git" target="_blank">Danieloliveria_GITHUB/MinhaPrimeiraApi</a>
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="https://github.com/Danieloliveria/Pokedex-.git" target="_blank">Danieloliveria_GITHUB/Pokedex-</a>
+                <i class="fa fa-github fa-fw w3-margin-right"></i>
+                <a href="https://github.com/Danieloliveria/dio-desafio-github.git" target="_blank">Danieloliveria_GITHUB/dio_desafio-</a>
               </h6>
               <p>TODO</p>
               <hr>
