--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
+
                 <a href="https://github.com/Danieloliveria/Pokedex-.git" target="_blank">Danieloliveria_GITHUB/Pokedex-</a>
               </h6>
               <p>Projeto DIO JavaScript (Pokedex)
@@ -244,7 +245,7 @@
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
       <a href="https://github.com/Danieloliveria" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="https://www.linkedin.com/in/daniel-rodrigues-de-oliveira-707388129/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <a href="LINK_LINKEDIN" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       <a href="LINK_FACEBOOK" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
       <a href="LINK_INSTAGRAM" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
       <a href="LINK_TWITTER" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
